<resources>
    <string name="app_name">Tip tap</string>
    <string name="costOfService">cost of service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing">Amazing (20%)</string>
    <string name="good">Good (15%)</string>
    <string name="okay">Okay (10%)</string>
    <string name="calculate">Calculate</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="tip_amount">Tip amount</string>
</resources>