<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cashInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="200dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cashEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:hint="@string/costOfService"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_was_the_service"
        app:layout_constraintTop_toBottomOf="@+id/cashInputLayout"
        app:layout_constraintStart_toStartOf="@+id/cashInputLayout"/>

    <RadioGroup
        android:id="@+id/tipOptionsRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTextView">

        <RadioButton
            android:id="@+id/amazingRadioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/amazing"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/goodRadioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/good"
            />
        <RadioButton
            android:text="@string/okay"
            android:id="@+id/badRadioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </RadioGroup>

    <Switch
        android:id="@+id/roundSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/round_up_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipOptionsRadioGroup"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        android:checked="true"/>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundSwitch"
        android:text="@string/calculate"
       />

    <TextView
        android:id="@+id/tipResultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton"
        app:layout_constraintEnd_toEndOf="@+id/calculateButton"
        android:text="@string/tip_amount"/>


</androidx.constraintlayout.widget.ConstraintLayout>